--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,7 @@
-*.el
-*.el~
-*.eld
-projectile-bookmarks.eld
 elpa/
-auto-save-list/
-transient/
-.dap-breakpoints
-.cache/
-eln-cache/
-!snips/
-.lsp-session-v1
-request/
-racket-mode/
+lsp-cache/
 bookmarks
 org-roam.db
-.org-id-locations
-straight/
-*.html
-config.el~
-config.el
-recentf
-url/
-projectile.cache
+eshell/
+eln-cache/
+auto-save-list/
